Add missing component to libsrcml example installs

--- a/examples/libsrcml/CMakeLists.txt
+++ b/examples/libsrcml/CMakeLists.txt
@@ -62,7 +62,7 @@ foreach(EXAMPLE IN ITEMS ${EXAMPLES})
     endif()
 
     # Install this example subdirectory
-    install(DIRECTORY "${EXAMPLE_DIR}" DESTINATION "${LIBSRCML_EXAMPLES_DIRECTORY}")
+    install(DIRECTORY "${EXAMPLE_DIR}" DESTINATION "${LIBSRCML_EXAMPLES_DIRECTORY}" COMPONENT DEVLIBS)
 
 endforeach()
 
@@ -71,7 +71,7 @@ file(COPY_FILE "CMakeLists.root.txt.in" "${EXAMPLE_ROOT}/CMakeLists.txt")
 
 # Copy/install the example files
 file(COPY ${TEST_FILES} DESTINATION "${EXAMPLE_ROOT}")
-install(FILES ${TEST_FILES} DESTINATION "${LIBSRCML_EXAMPLES_DIRECTORY}")
+install(FILES ${TEST_FILES} DESTINATION "${LIBSRCML_EXAMPLES_DIRECTORY}" COMPONENT DEVLIBS)
 
 # Append to the build file for each example
 foreach(EXAMPLE IN ITEMS ${EXAMPLES})
