Fix wording to match multiple and current behavior, and fix typo

--- a/doc/manpage/srcml.cfg
+++ b/doc/manpage/srcml.cfg
@@ -334,10 +334,10 @@ directory as the root directory.
 
 ## TRANSFORMATIONS
 
-`--${XPATH_OPTION_LONG}=_expression_`
-: Query each individual unit using the Xpath _expression_.
+`--${XPATH_OPTION_LONG}=`_expression_
+: Query each individual unit using the XPath _expression_. Multiple XPath expression options allowed.
 
-The default prefix cannot be used in Xpath expressions. Element names must have a prefix, e.g., `src`, `cpp`, etc. If path from the root is not given, i.e., '//...' or '/src:unit/..', context is assumed to the '//', e.g., 'src:name' is the same as '//src:name', and 'count(src:name)' is the same as 'count(//src:name)'. 
+The default prefix cannot be used in XPath expressions. Element names must have a prefix, e.g., `src`, `cpp`, etc. Path from the root is required.
 
 By default, the result is a srcML archive where each unit is a query result, marked with the original filename. As an alternative, the original srcML can be preserved with the query results marked with an attribute, wrapped with an element, or both. Note that the prefix and url used for the namespace
 must be declared with the option `--${XMLNS_FLAG}:`.
