--- a/.github/workflows/BuildWindows.yml
+++ b/.github/workflows/BuildWindows.yml
@@ -5,7 +5,7 @@ on: workflow_dispatch
 
 jobs:
   build:
-    runs-on: windows-latest
+    runs-on: windows-2019 #windows-latest
     timeout-minutes: 60
     steps:
 
@@ -21,10 +21,10 @@ jobs:
         with:
           vcpkgGitCommitId: 'acc3bcf76b84ae5041c86ab55fe138ae7b8255c7'
 
-      - name: Fix vcpkg
-        shell: bash
-        run: |
-          curl -L https://raw.githubusercontent.com/microsoft/vcpkg/4a600e9fea71bd7872080cbb716797e04d30e6d3/scripts/cmake/compile_wrapper_consider_clang-cl.patch -o "C:/Program Files/Microsoft Visual Studio/2022/Enterprise/VC/vcpkg/scripts/msys/compile_wrapper_consider_clang-cl.patch"
+      # - name: Fix vcpkg
+      #   shell: bash
+      #   run: |
+      #     curl -L https://raw.githubusercontent.com/microsoft/vcpkg/4a600e9fea71bd7872080cbb716797e04d30e6d3/scripts/cmake/compile_wrapper_consider_clang-cl.patch -o "C:/Program Files/Microsoft Visual Studio/2022/Enterprise/VC/vcpkg/scripts/msys/compile_wrapper_consider_clang-cl.patch"
 
       - name: Setup devcmd to use cl.exe
         uses: ilammy/msvc-dev-cmd@v1
