--- a/.github/workflows/BuildWindows.yml
+++ b/.github/workflows/BuildWindows.yml
@@ -13,7 +13,10 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Setup Windows
-        uses: microsoft/setup-msbuild@v1.1
+        uses: microsoft/setup-msbuild@v1.3.1
+        with:
+          vs-prerelease: true
+
 
       - name: Restore artifacts, or run vcpkg, build (and cache artifacts as post step)
         uses: lukka/run-vcpkg@v11
@@ -27,7 +30,7 @@ jobs:
       #     curl -L https://raw.githubusercontent.com/microsoft/vcpkg/4a600e9fea71bd7872080cbb716797e04d30e6d3/scripts/cmake/compile_wrapper_consider_clang-cl.patch -o "C:/Program Files/Microsoft Visual Studio/2022/Enterprise/VC/vcpkg/scripts/msys/compile_wrapper_consider_clang-cl.patch"
 
       - name: Setup devcmd to use cl.exe
-        uses: ilammy/msvc-dev-cmd@v1
+        uses: ilammy/msvc-dev-cmd@v1.12.1
 
       - name: Create build directory
         shell: bash
