--- a/.github/workflows/BuildWindows.yml
+++ b/.github/workflows/BuildWindows.yml
@@ -5,7 +5,7 @@ on: workflow_dispatch
 
 jobs:
   build:
-    runs-on: windows-2019 #windows-latest
+    runs-on: windows-latest
     timeout-minutes: 60
     steps:
 
