--- a/.github/workflows/BuildWindows.yml
+++ b/.github/workflows/BuildWindows.yml
@@ -64,7 +64,7 @@ jobs:
       #     path: build/dist/_CPack_Packages/win64/WIX/wix.log
       - uses: actions/upload-artifact@v3
         with:
-          name: WindowsInstallers
+          name: installers
           path: |
             build/dist/*.msi
             build/dist/*.zip
@@ -155,6 +155,23 @@ jobs:
       #     ./srcml_transform.exe || echo $?
       #     ./srcml_xpath.exe || echo $?
       #     ./srcml_xslt.exe || echo $?
+
+
+  test:
+    needs: build
+    runs-on: windows-latest
+
+    steps:
+      # Download the installer artifact
+      - name: Download installer
+        uses: actions/download-artifact@v2
+        with:
+          name: installers
+
+        shell: bash
+        continue-on-error: true
+        run: |
+          ls -lh
 
       # - name: Install package
       #   working-directory: build/dist
