Fix type on step

--- a/.github/workflows/BuildWindows.yml
+++ b/.github/workflows/BuildWindows.yml
@@ -168,7 +168,7 @@ jobs:
         with:
           name: installers
 
-        shell: bash
+      - shell: bash
         continue-on-error: true
         run: |
           ls -lh
