--- a/.github/workflows/BuildWindows.yml
+++ b/.github/workflows/BuildWindows.yml
@@ -6,6 +6,8 @@ on: workflow_dispatch
 jobs:
   build:
     runs-on: windows-latest
+    env:
+      SCCACHE_GHA_ENABLED: "true"
     timeout-minutes: 30
     steps:
 
@@ -30,6 +32,9 @@ jobs:
       - name: Setup devcmd to use cl.exe
         uses: ilammy/msvc-dev-cmd@v1.12.1
 
+      - name: Run sccache-cache
+        uses: mozilla-actions/sccache-action@v0.0.3
+
       - name: Create build directory
         shell: bash
         run: |
@@ -42,7 +47,7 @@ jobs:
         working-directory: build
         run: |
           export UseMultiToolTask=true
-          cmake .. --preset msvc
+          cmake .. --preset msvc -DCMAKE_C_COMPILER_LAUNCHER=sccache -DCMAKE_CXX_COMPILER_LAUNCHER=sccache
 
       - name: Build
         shell: bash
