macOS build: libxslt provided by macOS is *broken*, we need to replace it by homebrew version
When using the default libxslt provided by macOS, we get a compilation error which shows that it is actually broken:

The compilation emits this command line:
    /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/c++ \
    -Isrcml/src/libsrcml -Isrcml/src/libsrcml/. -Isrcml/src/parser/. -Isrcml/src/parser/SYSTEM \
    -Isrcml/build/parser \
    -isystem /Library/Developer/CommandLineTools/SDKs/MacOSX12.sdk/usr/include/libxml2 \       # incorrect path !!!
    -isystem /Library/Developer/CommandLineTools/SDKs/MacOSX12.sdk/usr/include \               # incorrect path !!!
    -isystem srcml/build/_deps/antlrsrc-src/lib/cpp -O3 -DNDEBUG -std=gnu++17 -arch arm64 \
    -isysroot /Library/Developer/CommandLineTools/SDKs/MacOSX.sdk \                            # this include C standard lib before the C++ standard lib
    -fPIC -Wall -Wextra -pedantic -MD -MT src/libsrcml/CMakeFiles/libsrcml.dir/relaxngTransformation.cpp.o \
    -MF src/libsrcml/CMakeFiles/libsrcml.dir/relaxngTransformation.cpp.o.d \
    -o src/libsrcml/CMakeFiles/libsrcml.dir/relaxngTransformation.cpp.o \
    -c srcml/src/libsrcml/relaxngTransformation.cpp

It refers two path from an older macOS sdk, and it include the C standard lib before C++ standard lib headers
This leads to an error like this:

    [1/18] Building CXX object src/libsrcml/CMakeFiles/libsrcml.dir/language_extension_registry.cpp.o
    FAILED: src/libsrcml/CMakeFiles/libsrcml.dir/language_extension_registry.cpp.o
    /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/c++  -Isrcml/src/libsrcml -Isrcml/src/libsrcml/. -Isrcml/src/parser/. -Isrcml/src/parser/SYSTEM -Isrcml/build/parser -isystem /Library/Developer/CommandLineTools/SDKs/MacOSX12.sdk/usr/include/libxml2 -isystem /Library/Developer/CommandLineTools/SDKs/MacOSX12.sdk/usr/include -isystem srcml/build/_deps/antlrsrc-src/

--- a/src/libsrcml/CMakeLists.txt
+++ b/src/libsrcml/CMakeLists.txt
@@ -6,6 +6,13 @@
 #
 # CMake files for the library libsrcml
 
+if(APPLE)
+    # Apple specific issue: libxslt provided by macOS is *broken*, we need to replace it by homebrew version
+    #     brew install libxslt
+    # And then tell pkg_config to prefer homebrew's version
+    set( ENV{PKG_CONFIG_PATH} "/opt/homebrew/opt/libxslt/lib/pkgconfig:$ENV{PKG_CONFIG_PATH}" )
+endif()
+
 find_package(LibXml2 REQUIRED)
 find_package(LibXslt REQUIRED)
 find_package(Iconv REQUIRED)
