--- a/.env-build
+++ b/.env-build
@@ -1,11 +1,13 @@
 VERSION=1.0.0
 PLATFORM=linux/arm64
+CCACHE_DIR=/ccache
 COMPOSE_COMMAND='
-    cmake --preset $PRESET -DBUILD_PARSER_TESTS=ON -DBUILD_CLIENT_TESTS=ON -DBUILD_LIBSRCML_TESTS=OFF -DBUILD_EXAMPLES=OFF /srcML;
-    ninja install;
-    ldconfig;
-    srcml --version;
-    ctest -j 6 --timeout 10;
-    ninja gen_parser_tests;
-    ninja run_parser_tests;
+    export CCACHE_DIR=/ccache;
+    cmake --preset $PRESET -DBUILD_PARSER_TESTS=ON -DBUILD_CLIENT_TESTS=ON -DBUILD_LIBSRCML_TESTS=OFF -DBUILD_EXAMPLES=OFF /srcML &&
+    ninja install &&
+    ldconfig &&
+    srcml --version &&
+    ctest -j 6 --timeout 15;
+    ninja gen_parser_tests &&
+    ninja run_parser_tests
 '
