--- a/compose.yml
+++ b/compose.yml
@@ -1,21 +1,25 @@
 volumes:
+  ccache: # Optional ccache
   data: # Input data
   dist: # Installers
 
 x-configuration: &CONFIGURATION
   volumes:
     - .:/srcML:ro
+    - ccache:/ccache
     - data:/Data:ro
     - dist:/Builds
   working_dir: /srcML-build
   command: bash -c "${COMPOSE_COMMAND-
-    cmake -G Ninja --preset $$PRESET -DBUILD_PARSER_TESTS=ON -DBUILD_CLIENT_TESTS=ON -DBUILD_LIBSRCML_TESTS=OFF -DBUILD_EXAMPLES=OFF /srcML;
-    ninja install;
-    ldconfig;
-    srcml --version;
-    ctest -j 6 --timeout 10; 
-    ninja gen_parser_tests;
-    ninja run_parser_tests; }
+    cmake -G Ninja --preset $$PRESET -DBUILD_PARSER_TESTS=ON -DBUILD_CLIENT_TESTS=ON -DBUILD_LIBSRCML_TESTS=OFF -DBUILD_EXAMPLES=OFF /srcML &&
+    ninja &&
+    echo "HELLO" &&
+    ninja install &&
+    ldconfig &&
+    srcml --version &&
+    ctest -j 6 --timeout 10 &&
+    ninja gen_parser_tests &&
+    ninja run_parser_tests }
     ${COMPOSE_APPEND- }"
 
 x-platforms: &PLATFORMS
@@ -55,22 +59,28 @@ services:
   #       - dist:/dist
   #   command: tar -cz -C /dist .
 
-  ubuntu_24.04: &UBUNTU_LATEST
+  ubuntu:
+    image: srcml/ubuntu:latest
+    platform: ${PLATFORM}
+    environment:
+      - VERSION=${VERSION}
+      - PRESET=gcc-release
+    <<: *CONFIGURATION
+
+  ubuntu_24.04:
     image: srcml/ubuntu:24.04
     platform: ${PLATFORM}
     build:
       context: docker/ubuntu/
+      tags:
+        - "srcml/ubuntu:latest"
       args:
         TAG: "24.04"
       <<: *PLATFORMS
     environment:
-      # - PLATFORM=ubuntu_24.04
       - VERSION=${VERSION}
       - PRESET=gcc-release
-      - *DEB_PACKAGE_PREFIX
     <<: *CONFIGURATION
-
-  ubuntu: *UBUNTU_LATEST
 
   ubuntu_23.10:
     image: srcml/ubuntu:23.10
@@ -117,11 +127,21 @@ services:
       - *DEB_PACKAGE_PREFIX
     <<: *CONFIGURATION
 
-  fedora_41: &FEDORA_LATEST
+  fedora:
+    image: srcml/fedora:latest
+    platform: ${PLATFORM}
+    environment:
+      - VERSION=${VERSION}
+      - PRESET=rpm-release
+    <<: *CONFIGURATION
+
+  fedora_41:
     image: srcml/fedora:41
     platform: ${PLATFORM}
     build:
       context: docker/fedora/
+      tags:
+        - "srcml/fedora:latest"
       args:
         TAG: "41"
       <<: *PLATFORMS
@@ -130,8 +150,6 @@ services:
       - VERSION=${VERSION}
       - PRESET=rpm-release
     <<: *CONFIGURATION
-
-  fedora: *FEDORA_LATEST
 
   fedora_40:
     image: srcml/fedora:40
@@ -178,7 +196,7 @@ services:
   opensuse_15:
     image: srcml/opensuse:15
     build:
-      context: docker/opensuse/leap/
+      context: docker/opensuse/
       args:
         OPENSUSE: "leap"
         TAG: "15"
@@ -186,17 +204,75 @@ services:
     environment:
       # - PLATFORM=opensuse_15
       - VERSION=${VERSION}
+      - PRESET=rpm-release
     <<: *CONFIGURATION
 
-  opensuse_15.6:
-    image: srcml/opensuse:15.6
+  opensuse_15.5:
+    image: srcml/opensuse:15.5
     build:
-      context: docker/opensuse/leap/
+      context: docker/opensuse/
       args:
         OPENSUSE: "leap"
-        TAG: "15.6"
+        TAG: "15.5"
       <<: *PLATFORMS
     environment:
-      # - PLATFORM=opensuse_15.6
+      # - PLATFORM=opensuse_15.5
       - VERSION=${VERSION}
+      - PRESET=rpm-release
+    <<: *CONFIGURATION
+
+  opensuse_15.4:
+    image: srcml/opensuse:15.4
+    build:
+      context: docker/opensuse/
+      args:
+        OPENSUSE: "leap"
+        TAG: "15.4"
+      <<: *PLATFORMS
+    environment:
+      # - PLATFORM=opensuse_15.4
+      - VERSION=${VERSION}
+      - PRESET=rpm-release
+    <<: *CONFIGURATION
+
+  opensuse_15.3:
+    image: srcml/opensuse:15.3
+    build:
+      context: docker/opensuse/
+      args:
+        OPENSUSE: "leap"
+        TAG: "15.3"
+      <<: *PLATFORMS
+    environment:
+      # - PLATFORM=opensuse_15.3
+      - VERSION=${VERSION}
+      - PRESET=rpm-release
+    <<: *CONFIGURATION
+
+  opensuse_15.2:
+    image: srcml/opensuse:15.2
+    build:
+      context: docker/opensuse/
+      args:
+        OPENSUSE: "leap"
+        TAG: "15.2"
+      <<: *PLATFORMS
+    environment:
+      # - PLATFORM=opensuse_15.2
+      - VERSION=${VERSION}
+      - PRESET=rpm-release
+    <<: *CONFIGURATION
+
+  opensuse_tumbleweed:
+    image: srcml/opensuse:tumbleweed
+    build:
+      context: docker/opensuse/
+      args:
+        OPENSUSE: "tumbleweed"
+        TAG: "latest"
+      <<: *PLATFORMS
+    environment:
+      # - PLATFORM=opensuse_15.0
+      - VERSION=${VERSION}
+      - PRESET=rpm-release
     <<: *CONFIGURATION
