Add docker compose install to Docker action

--- a/.github/workflows/Docker.yml
+++ b/.github/workflows/Docker.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Setup macOS
         shell: bash
         run: |
-          brew install docker
+          brew install docker docker-compose
           docker --version
           docker compose --version
 
