--- a/.github/workflows/Docker.yml
+++ b/.github/workflows/Docker.yml
@@ -16,7 +16,7 @@ jobs:
         shell: bash
         run: |
           brew install docker docker-compose
-          echo "cliPluginsExtraDirs": ["/opt/homebrew/lib/docker/cli-plugins"]' >> ~/.docker/config.json
+          echo '"cliPluginsExtraDirs": ["/opt/homebrew/lib/docker/cli-plugins"] >> ~/.docker/config.json'
           docker --version
           docker compose --version
 
