Replace explicit command with workflow

--- a/.env
+++ b/.env
@@ -1,13 +1,4 @@
 VERSION=1.0.0
 PLATFORM=linux/arm64
 CCACHE_DIR=/ccache
-COMPOSE_COMMAND='
-    export CCACHE_DIR=/ccache;
-    cmake --preset $PRESET -DBUILD_PARSER_TESTS=ON -DBUILD_CLIENT_TESTS=ON -DBUILD_LIBSRCML_TESTS=OFF -DBUILD_EXAMPLES=OFF /srcML &&
-    ninja install &&
-    ldconfig &&
-    srcml --version &&
-    ctest -j 6 --timeout 15;
-    ninja gen_parser_tests &&
-    ninja run_parser_tests
-'
+COMPOSE_PROFILES=platform
