--- a/docker/ubuntu/Dockerfile
+++ b/docker/ubuntu/Dockerfile
@@ -54,8 +54,9 @@ RUN apt-get update && apt-get install --no-install-recommends -y \
 # Install direct binary for Ubuntu 20.04
 ARG TAG
 ENV TAG=$TAG
+ARG CMAKE_BINARY
 ARG TARGETPLATFORM
-RUN if [ "$TAG" = "20.04" ]; then case "${TARGETPLATFORM}" in \
+RUN if [ "$CMAKE_BINARY" = "ON" ]; then case "${TARGETPLATFORM}" in \
          "linux/amd64")  ARCHITECTURE="x86_64"   ;; \
          "linux/arm64")  ARCHITECTURE="aarch64"  ;; \
          *)  exit 1 ;; \
@@ -63,7 +64,7 @@ RUN if [ "$TAG" = "20.04" ]; then case "${TARGETPLATFORM}" in \
     curl --insecure -L "https://github.com/Kitware/CMake/releases/download/v3.29.0/cmake-3.29.0-linux-${ARCHITECTURE}.tar.gz" | tar xz --strip-components=1 -C /usr/local; \
     fi
 # Install via apt.kitware.com package repo for all but Ubuntu 20.04
-RUN if [ "$TAG" != "20.04" ]; then apt-get update && \
+RUN if [ "$CMAKE_BINARY" != "ON" ]; then apt-get update && \
     apt-get install gpg wget --no-install-recommends -y && \
     wget -O - https://apt.kitware.com/keys/kitware-archive-latest.asc 2>/dev/null | gpg --dearmor - | tee /usr/share/keyrings/kitware-archive-keyring.gpg >/dev/null && \
     echo 'deb [signed-by=/usr/share/keyrings/kitware-archive-keyring.gpg] https://apt.kitware.com/ubuntu/ jammy main' | tee /etc/apt/sources.list.d/kitware.list >/dev/null && \
